fix scrollbar issue on chrome

--- a/frontend/styles/NavBar.module.scss
+++ b/frontend/styles/NavBar.module.scss
@@ -8,7 +8,7 @@
 	backdrop-filter: blur(15px);
     padding: 0 5vw;
 	height: 80px;
-	width: 100%;
+	width: 100vw;
 	transition: all 0.2s ease-in-out;
 	z-index: 1;
 }
